# ffmpeg_codetest

./: .gitignore  CMakeLists.txt  README.txt  VideoDecoding.cpp  VideoDecoding.h  VideoEncoding.cpp  VideoEncoding.h  main.cpp
libs/ffmpeg/: README.md
libs/ffmpeg/lib/: libavcodec.dylib  libavdevice.58.8.100.dylib  libavfilter.7.dylib  libavformat.58.dylib  libavutil.56.dylib  libfreetype.6.dylib  libpostproc.55.dylib  libswresample.3.5.100.dylib
libs/ffmpeg/lib/pkgconfig/: libavdevice.pc  libavformat.pc
libs/lib/: libSDL2-2.0.0.dylib  libpng16.16.dylib  libswscale.dylib  libx264.148.dylib
libs/lib/pkgconfig/: libavcodec.pc  libpostproc.pc  libswresample.pc  libswscale.pc
